2000-10-05  Laurent Pautet  <pautet@arlequin>

	* s-gartas.adb, s-gastha.adb: Free only non-null entities (8203-003).

2000-09-21  Laurent Pautet  <pautet@arlequin>

	* s-gastds.adb, s-gastds.ads: implementation of distributed shared
	memory as storage support.
	
	* s-parint.adb: register a shared passive unit in storages
	before having checked the version consistency in order to
	avoid deadlock problem.
	
	* s-garsto.adb, s-garsto.ads, s-gastdf.adb, s-gastdf.ads: cleanify
	implementation and documentation.

	* Makefile.am, Makefile.in: add s-gastds.ad[bs] to the list of
	glade sources.

2000-09-12  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gaphlo.adb: (Get_Support_Name): return the full name as being
	the protocol name if no column is found. Bug found by code reading.

2000-09-12  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gastdf.adb, s-gastdf.ads, s-garsto.ads, s-garsto.adb,
 	s-shasto.adb: Take advantage of the call to Shared_Var_Close
 	introduced by 8102-004. Protect the stream operations against
 	exception, abortion and concurrent access.

2000-09-08  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in, s-gastdf.ads, s-gastdf.adb: Move
 	storage supports like DFS into the Storages hierarchy in order to
 	have a model similar to the Protocoles one.

2000-09-07  Laurent Pautet  <pautet@inf.enst.fr>

	* s-shasto.ads, s-shasto.adb, Makefile.am, Makefile.in: Replace
 	s-shamem with s-shasto.

2000-09-02  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gartas.adb, s-gartas.ads: Remove usage of requeue statements
 	and replace them with uses of watchers. Export Mutex_PO because an
 	ATC construct needs a entry call as statement for the first
 	alternative. Needed to remove requeue statement in
 	System.RPC.Server. Reorganize code in alphabetic order. This fix
 	will help for 7830-007 and improve the code anyway.

	* s-rpcser.adb: Remove usage of requeue statements and clean up
 	the original implementation. Simplify implementation of RPC